# python-pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.md  setup.cfg
.github/workflows/: pytest.yml
pre_commit_hooks/: check_extern_c.py  check_file_sections.py  check_filename.py  check_header_guards.py  check_legal.py
tests/: c.h
tests/ressources/: a.c  a.h  b.h  c.c
tests/results/check_legal/: b.c
