[metadata]
name = pre_commit_arni
version = 0.1.0
description = pre commit hooks, used by the arni project
long_description = file: README.md
long_description_content_type = text/markdown
author = Philip Ecker
author_email = eckphi@icloud.com
license = Unlicense
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    chardet
    gitpython
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-header-guards = pre_commit_hooks.check_header_guards:main
    check-extern-c = pre_commit_hooks.check_extern_c:main
    check-legal = pre_commit_hooks.check_legal:main
    check-file-sections = pre_commit_hooks.check_file_sections:main
    check-filename = pre_commit_hooks.check_filename:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
